--- a/app/src/main/res/layout/info_grid_layout.xml
+++ b/app/src/main/res/layout/info_grid_layout.xml
@@ -23,6 +23,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:scaleType="center"
+                android:clickable="true"
                 android:src="@mipmap/ic_launcher" />
 <!--
             <TextView
