--- a/app/src/main/res/layout/fragment_tool_sell.xml
+++ b/app/src/main/res/layout/fragment_tool_sell.xml
@@ -101,11 +101,27 @@
                     android:id="@+id/btnSellTool"
                     android:layout_width="wrap_content"
                     android:layout_height="40dp"
-                    android:layout_centerHorizontal="true"
+                    android:layout_alignParentLeft="true"
+                    android:layout_marginStart="50dp"
                     android:layout_marginTop="490dp"
                     android:background="@drawable/button_radius"
                     android:elevation="50sp"
                     android:text="Sell"
+                    android:textColor="#fff"
+                    android:textSize="15sp"
+                    android:textStyle="bold" />
+
+                <Button
+                    android:id="@+id/btnRentTool"
+                    android:layout_width="wrap_content"
+                    android:layout_height="40dp"
+                    android:layout_marginTop="490dp"
+                    android:background="@drawable/button_radius"
+                    android:elevation="50sp"
+                    android:layout_marginStart="260dp"
+                    android:layout_marginEnd="50dp"
+                    android:layout_alignParentRight="true"
+                    android:text="Rent"
                     android:textColor="#fff"
                     android:textSize="15sp"
                     android:textStyle="bold" />
