--- a/app/src/main/res/layout/alert_dialog_with_ratingbar.xml
+++ b/app/src/main/res/layout/alert_dialog_with_ratingbar.xml
@@ -7,8 +7,11 @@
         android:id="@+id/ratingbar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_gravity="center_horizontal"
+        android:textAlignment="center"
+        android:layout_marginTop="30dp"
         android:numStars="5"
+
         android:stepSize="0.5"/>
 
 
