--- a/app/src/main/res/layout/fragment_links.xml
+++ b/app/src/main/res/layout/fragment_links.xml
@@ -5,10 +5,12 @@
     android:layout_height="match_parent"
     tools:context=".KnowledgeFragmentsTabs.LinksFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+<androidx.recyclerview.widget.RecyclerView
+    android:id="@+id/link_recycler"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="#FFF"
+    android:orientation="vertical">
 
+</androidx.recyclerview.widget.RecyclerView>
 </FrameLayout>
